@startuml

title __FAPI's Class Diagram__\n

  namespace by.training.nc.sd3 {
    class by.training.nc.sd3.FapiApplication {
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace controller {
      class by.training.nc.sd3.controller.BillingAccountDataController {
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace controller {
      class by.training.nc.sd3.controller.ProductInstanceDataController {
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace controller {
      class by.training.nc.sd3.controller.ProductOfferingDataController {
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace controller {
      class by.training.nc.sd3.controller.StatisticsEntryDataController {
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace controller {
      class by.training.nc.sd3.controller.UserAccountDataController {
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace filter {
      class by.training.nc.sd3.filter.CorsFilter {
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace models {
      class by.training.nc.sd3.models.BillingAccountViewModel {
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace models {
      enum Categories {
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace models {
      class by.training.nc.sd3.models.OfferParamViewModel {
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace models {
      class by.training.nc.sd3.models.ProductInstanceViewModel {
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace models {
      class by.training.nc.sd3.models.ProductOfferingViewModel {
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace models {
      class by.training.nc.sd3.models.StatisticsEntryViewModel {
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace models {
      class by.training.nc.sd3.models.UserAccountViewModel {
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace security {
      class by.training.nc.sd3.security.JwtAuthenticationEntryPoint {
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace security {
      class by.training.nc.sd3.security.JwtAuthenticationFilter {
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace security {
      class by.training.nc.sd3.security.SecurityJwtConstants {
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace security {
      class by.training.nc.sd3.security.TokenProvider {
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace security {
      class by.training.nc.sd3.security.WebSecurityConfig {
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace service {
      interface by.training.nc.sd3.service.BillingAccountDataService {
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace service {
      interface by.training.nc.sd3.service.ProductInstanceDataService {
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace service {
      interface by.training.nc.sd3.service.ProductOfferingDataService {
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace service {
      interface by.training.nc.sd3.service.StatisticsEntryDataService {
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace service {
      interface by.training.nc.sd3.service.UserAccountDataService {
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace service {
      namespace impl {
        class by.training.nc.sd3.service.impl.BillingAccountDataServiceImpl {
        }
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace service {
      namespace impl {
        class by.training.nc.sd3.service.impl.ProductInstanceDataServiceImpl {
        }
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace service {
      namespace impl {
        class by.training.nc.sd3.service.impl.ProductOfferingDataServiceImpl {
        }
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace service {
      namespace impl {
        class by.training.nc.sd3.service.impl.StatisticsEntryDataServiceImpl {
        }
      }
    }
  }
  

  namespace by.training.nc.sd3 {
    namespace service {
      namespace impl {
        class by.training.nc.sd3.service.impl.UserAccountDataServiceImpl {
        }
      }
    }
  }
  

  by.training.nc.sd3.controller.BillingAccountDataController o-- by.training.nc.sd3.service.BillingAccountDataService : billingAccountDataService
  by.training.nc.sd3.controller.ProductInstanceDataController o-- by.training.nc.sd3.service.ProductInstanceDataService : productInstanceDataService
  by.training.nc.sd3.controller.ProductOfferingDataController o-- by.training.nc.sd3.service.ProductOfferingDataService : productOfferingDataService
  by.training.nc.sd3.controller.StatisticsEntryDataController o-- by.training.nc.sd3.service.StatisticsEntryDataService : statisticsEntryDataService
  by.training.nc.sd3.controller.UserAccountDataController o-- by.training.nc.sd3.service.UserAccountDataService : userAccountDataService
  by.training.nc.sd3.filter.CorsFilter .up.|> javax.servlet.Filter
  by.training.nc.sd3.models.ProductInstanceViewModel o-- by.training.nc.sd3.models.ProductOfferingViewModel : productOffering
  by.training.nc.sd3.models.StatisticsEntryViewModel o-- by.training.nc.sd3.models.ProductOfferingViewModel : serviceId
  by.training.nc.sd3.models.UserAccountViewModel .up.|> org.springframework.security.core.userdetails.UserDetails
  by.training.nc.sd3.security.JwtAuthenticationFilter -up-|> org.springframework.web.filter.OncePerRequestFilter
  by.training.nc.sd3.security.JwtAuthenticationFilter o-- by.training.nc.sd3.security.TokenProvider : tokenProvider
  by.training.nc.sd3.security.TokenProvider .up.|> java.io.Serializable
  by.training.nc.sd3.security.WebSecurityConfig -up-|> org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter
  by.training.nc.sd3.security.WebSecurityConfig o-- by.training.nc.sd3.service.UserAccountDataService : userAccountDataService
  by.training.nc.sd3.service.impl.BillingAccountDataServiceImpl .up.|> by.training.nc.sd3.service.BillingAccountDataService
  by.training.nc.sd3.service.impl.ProductInstanceDataServiceImpl .up.|> by.training.nc.sd3.service.ProductInstanceDataService
  by.training.nc.sd3.service.impl.ProductOfferingDataServiceImpl .up.|> by.training.nc.sd3.service.ProductOfferingDataService
  by.training.nc.sd3.service.impl.StatisticsEntryDataServiceImpl .up.|> by.training.nc.sd3.service.StatisticsEntryDataService
  by.training.nc.sd3.service.impl.UserAccountDataServiceImpl .up.|> by.training.nc.sd3.service.UserAccountDataService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
